[gd_scene load_steps=3 format=3 uid="uid://u2848txj3vwu"]

[ext_resource type="Script" path="res://levels/TelaResultado.gd" id="1_x61jf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2khk"]
content_margin_left = 20.0
content_margin_top = 50.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.176664, 0.14937, 0.126509, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.296551, 0.298225, 0.0685523, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="TelaResultado" type="CanvasLayer"]
visible = false
script = ExtResource("1_x61jf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0, 0, 0.65098)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f2khk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TituloLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="InsigniaImagem" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
stretch_mode = 5

[node name="DescricaoLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="ReiniciarButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Tentar Novamente"
